[gd_scene load_steps=2 format=3 uid="uid://cmo1wskt3amu1"]

[ext_resource type="Script" uid="uid://c60kueuui8fj3" path="res://examples/torrent_browser/torrent_browser.gd" id="1"]

[node name="TorrentBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot-Torrent Browser"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InputSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MagnetLabel" type="Label" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "Magnet URI:"

[node name="MagnetInput" type="LineEdit" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "magnet:?xt=urn:btih:a88fda5954e89178c372716a6a78b8180ed4dad3&dn=The+WIRED+CD+-+Rip.+Sample.+Mash.+Share&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2F&xs=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fwired-cd.torrent"
placeholder_text = "magnet:?xt=urn:btih:..."

[node name="LoadButton" type="Button" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "Load Torrent"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TorrentNameLabel" type="Label" parent="VBoxContainer/InfoSection"]
layout_mode = 2
text = "Name: -"

[node name="TorrentSizeLabel" type="Label" parent="VBoxContainer/InfoSection"]
layout_mode = 2
text = "Size: -"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FileTreeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Files (check to download):"

[node name="FileSelectionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectAllButton" type="Button" parent="VBoxContainer/FileSelectionButtons"]
layout_mode = 2
text = "Select All"

[node name="SelectNoneButton" type="Button" parent="VBoxContainer/FileSelectionButtons"]
layout_mode = 2
text = "Select None"

[node name="FileTree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DownloadSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DownloadPathLabel" type="Label" parent="VBoxContainer/DownloadSection"]
layout_mode = 2
text = "Download Path:"

[node name="DownloadPathInput" type="LineEdit" parent="VBoxContainer/DownloadSection"]
layout_mode = 2
placeholder_text = "/path/to/downloads"

[node name="DownloadButton" type="Button" parent="VBoxContainer/DownloadSection"]
layout_mode = 2
text = "Start Download"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/ProgressSection"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="VBoxContainer/ProgressSection"]
layout_mode = 2
text = "Progress: 0%"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
autowrap_mode = 2
